Fixes leaflet popup having wrong color in dark mode

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -700,3 +700,8 @@ li > a > .fa-external-link-alt{
   display: inline !important;
   color: #FFFFFF;
 }
+
+/* leaflet popup pane layout */
+.infowin {
+  color: #181818 !important;
+}
